TY-137: [RTL]: label letters no longer aligned to the right

--- a/sugarcrm/styleguide/less/sugar-specific/rtl.less
+++ b/sugarcrm/styleguide/less/sugar-specific/rtl.less
@@ -80,6 +80,7 @@ html.rtl {
 
     .label-module {
         padding: 3px 3px 0 0;
+        text-align: right;
     }
 
     .label-module-md {
